get operators to pop out in another div or span

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1 id="restaurantName"></h1>
+    <h1 id="restaurantName">Moon Garden Restaurant</h1>
     <h2 id="calculator">
-        <div class="calcDisplay"></div>
-        <div class="calcBtn"></div>
-        <div class="calcBtn"></div>
-        <div class="calcBtn"></div>
-        <div class="calcBtn"></div>
-        <div class="calcBtn"></div>
+        <div id="calcDisplay"><div id="operator"></div></div>
+            <div class="calcBtn"></div>
+            <div class="calcBtn"></div>
+            <div class="calcBtn"></div>
+            <div class="calcBtn"></div>
+            <div class="calcBtn"></div>
     </h1>
     
 
