get pay button to work, make sure they get the right change when inputed money in or inputed orders

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1 id="restaurantName">Moon Garden Restaurant</h1>
+    <h1 id="restaurantName"></h1>
     <h2 id="calculator">
-        <div id="calcDisplay"><div id="operator"></div></div>
+        <div id="calcDisplay"></div>
+            <div class="calcBtn"></div>
             <div class="calcBtn"></div>
             <div class="calcBtn"></div>
             <div class="calcBtn"></div>
