change functionality of adding multple numbers

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 </head>
 <body>
     <h1 id="restaurantName"></h1>
-    <h2 id="calculator">
+    <div id="calculator">
         <div id="calcDisplay"></div>
-            <div class="calcBtn"></div>
-            <div class="calcBtn"></div>
-            <div class="calcBtn"></div>
-            <div class="calcBtn"></div>
-            <div class="calcBtn"></div>
-            <div class="calcBtn"></div>
-    </h1>
-    
-
-
+        <div id="flex">
+            <div id="buttonBox">
+                    <div class="calcBtn"></div>
+                    <div class="calcBtn"></div>
+                    <div class="calcBtn"></div>
+                    <div class="calcBtn"></div>
+                    <div class="calcBtn"></div>
+            </div>
+            <div id="operationBtns"></div>
+        </div>
+    </div>
     <script src="/js/cash_register.js"></script>
     <script src="/js/calculator.js"></script>
 </body>
