--- a/index.html
+++ b/index.html
@@ -6,20 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Register</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 id="restaurantName"></h1>
-    <div id="calculator">
-        <div id="calcDisplay"></div>
-        <div id="flex">
-            <div id="buttonBox">
-                    <div class="calcBtn"></div>
-                    <div class="calcBtn"></div>
-                    <div class="calcBtn"></div>
-                    <div class="calcBtn"></div>
-                    <div class="calcBtn"></div>
+    <h1 id="restaurantName"> Moon Garden Restaurant</h1>
+    <div id="bigBox">
+        <div id="calculator">
+            <div id="calcDisplay"></div>
+            <div id="flex">
+                <div id="buttonBox">
+                        <div class="calcBtn"></div>
+                        <div class="calcBtn"></div>
+                        <div class="calcBtn"></div>
+                        <div class="calcBtn"></div>
+                        <div class="calcBtn"></div>
+                </div>
+                <div id="operationBtns"></div>
             </div>
-            <div id="operationBtns"></div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="#">Honey BBQ Glazed Ribs</a>
+                <a href="#">Beef Chow Funn</a>
+                <a href="#">Stuffed Wintermelon</a>
+                <a href="#">Tea Smoked Duck</a>
+                <a href="#">Minute Chicken</a>
+                <a href="#">Free Range Chicken with Ginger Scalion Sauce</a>
+            </div>
+        </div>
+        <div id="foodPics">
+            <div class="pics"><img src="https://s3-media2.fl.yelpcdn.com/bphoto/4elgJ-sdvXARBrBfqC7iLg/o.jpg" alt="BBQ Ribs"></div>
+            <div class="pics"><img src="https://s3-media1.fl.yelpcdn.com/bphoto/0_W_nmHcNW1PUBcrOZwnaQ/o.jpg" alt="Beef Chow Funn"></div>
+            <div class="pics"><img src="https://s3-media3.fl.yelpcdn.com/bphoto/_CkJQD-SGBYaZ32sNst02g/o.jpg" alt="Stuffed Wintermelon"></div>
+            <div class="pics"><img src="https://s3-media2.fl.yelpcdn.com/bphoto/LOYKCYhpQhbO20bLwYxZbA/o.jpg" alt="Tea Smoked Duck"></div>
+            <div class="pics"><img src="https://s3-media3.fl.yelpcdn.com/bphoto/dvKTnBXtkUNpilzJBPl5Yw/o.jpg" alt="Minute Chicken"></div>
+            <div class="pics"><img src="https://s3-media4.fl.yelpcdn.com/bphoto/9lN3DuAGOyUdZsX8kU3cHA/o.jpg" alt="Cold Ginger Chicken"></div>
         </div>
     </div>
     <script src="/js/cash_register.js"></script>
