fix my calc funcs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 id="restaurantName"> Moon Garden Restaurant</h1>
+    <h1 id="restaurantName"><img src="/assets/0001.png" alt="" id="banner"></h1>
     <div id="bigBox">
         <div id="calculator">
             <div id="calcDisplay"></div>
@@ -28,7 +28,7 @@
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
                 <a href="#">Honey BBQ Glazed Ribs</a>
-                <a href="#">Beef Chow Funn</a>
+                <a href="#">Beef Chow Funn<span class="price">$24.00<span></a>
                 <a href="#">Stuffed Wintermelon</a>
                 <a href="#">Tea Smoked Duck</a>
                 <a href="#">Minute Chicken</a>
@@ -36,12 +36,12 @@
             </div>
         </div>
         <div id="foodPics">
-            <div class="pics"><img src="https://s3-media2.fl.yelpcdn.com/bphoto/4elgJ-sdvXARBrBfqC7iLg/o.jpg" alt="BBQ Ribs"></div>
-            <div class="pics"><img src="https://s3-media1.fl.yelpcdn.com/bphoto/0_W_nmHcNW1PUBcrOZwnaQ/o.jpg" alt="Beef Chow Funn"></div>
+            <div class="pics"><img src="" alt=""></div>
+            <!-- <div class="pics"><img src="https://s3-media1.fl.yelpcdn.com/bphoto/0_W_nmHcNW1PUBcrOZwnaQ/o.jpg" alt="Beef Chow Funn"></div>
             <div class="pics"><img src="https://s3-media3.fl.yelpcdn.com/bphoto/_CkJQD-SGBYaZ32sNst02g/o.jpg" alt="Stuffed Wintermelon"></div>
             <div class="pics"><img src="https://s3-media2.fl.yelpcdn.com/bphoto/LOYKCYhpQhbO20bLwYxZbA/o.jpg" alt="Tea Smoked Duck"></div>
             <div class="pics"><img src="https://s3-media3.fl.yelpcdn.com/bphoto/dvKTnBXtkUNpilzJBPl5Yw/o.jpg" alt="Minute Chicken"></div>
-            <div class="pics"><img src="https://s3-media4.fl.yelpcdn.com/bphoto/9lN3DuAGOyUdZsX8kU3cHA/o.jpg" alt="Cold Ginger Chicken"></div>
+            <div class="pics"><img src="https://s3-media4.fl.yelpcdn.com/bphoto/9lN3DuAGOyUdZsX8kU3cHA/o.jpg" alt="Cold Ginger Chicken"></div> -->
         </div>
     </div>
     <script src="/js/cash_register.js"></script>
