added prices to menu items, also and add to bill button

--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
                 </div>
                 <div id="operationBtns"></div>
             </div>
+            <div id="buyBtn"><button id="addItemToTotal">Add to bill</button></div>
         </div>
         <div class="dropdown">
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-                <a href="#">Honey BBQ Glazed Ribs</a>
-                <a href="#">Beef Chow Funn<span class="price">$24.00<span></a>
-                <a href="#">Stuffed Wintermelon</a>
-                <a href="#">Tea Smoked Duck</a>
-                <a href="#">Minute Chicken</a>
-                <a href="#">Free Range Chicken with Ginger Scalion Sauce</a>
+                <a href="#">Honey BBQ Glazed Ribs<br><span class="price">24</span></a>
+                <a href="#">Beef Chow Funn<br><span class="price">10</span></a>
+                <a href="#">Stuffed Wintermelon<br><span class="price">30</span></a>
+                <a href="#">Tea Smoked Duck<br><span class="price">14</span></a>
+                <a href="#">Minute Chicken<br><span class="price">9</span></a>
+                <a href="#">Free Range Chicken with Ginger Scalion Sauce<br><span class="price">16</span></a>
             </div>
         </div>
         <div id="foodPics">
