fixed the prompt button, working on update div under calcDisplay

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="bigBox">
         <div id="calculator">
             <div id="calcDisplay"></div>
+            <span id="update"></span>
             <div id="flex">
                 <div id="buttonBox">
                         <div class="calcBtn"></div>
@@ -28,12 +29,12 @@
         <div class="dropdown">
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-                <a href="#">Honey BBQ Glazed Ribs<br><span class="price">24</span></a>
+                <a href="#">BBQ Ribs<br><span class="price">24</span></a>
                 <a href="#">Beef Chow Funn<br><span class="price">10</span></a>
                 <a href="#">Stuffed Wintermelon<br><span class="price">30</span></a>
                 <a href="#">Tea Smoked Duck<br><span class="price">14</span></a>
                 <a href="#">Minute Chicken<br><span class="price">9</span></a>
-                <a href="#">Free Range Chicken with Ginger Scalion Sauce<br><span class="price">16</span></a>
+                <a href="#">Cold Ginger Chicken<br><span class="price">16</span></a>
             </div>
         </div>
         <div id="foodPics">
