--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Register</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 id="restaurantName"><img src="/assets/0001.png" alt="" id="banner"></h1>
+    <h1 id="restaurantName"><img src="../assets/0001.png" alt="" id="banner"></h1>
     <div id="bigBox">
         <div id="calculator">
             <div id="calcDisplay"></div>
@@ -46,7 +46,7 @@
             <div class="pics"><img src="https://s3-media4.fl.yelpcdn.com/bphoto/9lN3DuAGOyUdZsX8kU3cHA/o.jpg" alt="Cold Ginger Chicken"></div> -->
         </div>
     </div>
-    <script src="/js/cash_register.js"></script>
-    <script src="/js/calculator.js"></script>
+    <script src="../js/cash_register.js"></script>
+    <script src="../js/calculator.js"></script>
 </body>
 </html>
