--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Register</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -46,7 +46,7 @@
             <div class="pics"><img src="https://s3-media4.fl.yelpcdn.com/bphoto/9lN3DuAGOyUdZsX8kU3cHA/o.jpg" alt="Cold Ginger Chicken"></div> -->
         </div>
     </div>
-    <script src="../js/cash_register.js"></script>
-    <script src="../js/calculator.js"></script>
+    <script src="js/cash_register.js"></script>
+    <script src="js/calculator.js"></script>
 </body>
 </html>
