--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 id="restaurantName"><img src="../assets/0001.png" alt="" id="banner"></h1>
+    <h1 id="restaurantName"><img src="assets/0001.png" alt="" id="banner"></h1>
     <div id="bigBox">
         <div id="calculator">
             <div id="calcDisplay"></div>
